smtp added, verification with email code, now you can change your password there's endpoints for that
